--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
-  text-align: center;
+.u-section-1 {
+  background-image: url("../assets/images/img-principal.png");
+  background-position: 50% 0%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.u-section-1 .u-sheet-1 {
+  min-height: 710px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.u-section-1 .u-group-1 {
+  width: 693px;
+  min-height: 310px;
+  height: auto;
+  margin: 20px auto 75px;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.u-section-1 .u-text-1 {
+  margin-left: 0;
+  margin-right: 0;
+  position: relative;
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  font-size: 8rem;
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-text-2 {
+  position: relative;
+  font-size: 1.25rem;
+  margin: 20px 0 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 619px;
+  }
+
+  .u-section-1 .u-group-1 {
+    width: 571px;
+    margin-top: 10px;
+    margin-bottom: 60px;
+    height: auto;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1.125rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 991px) {
+  .u-section-1 .u-group-1 {
+    width: 438px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-group-1 {
+    width: 410px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-group-1 {
+    width: 340px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 6rem;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 462px;
+}
+
+.u-section-2 .u-layout-wrap-1 {
+  margin: 29px auto 29px 0;
+}
+
+.u-section-2 .u-image-1 {
+  min-height: 403px;
+  background-image: url("../assets/images/car-5.png");
+  background-position: 50% 50%;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 403px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding-right: 20px;
+}
+
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  margin: 30px 0 0 -149px;
+}
+
+.u-section-2 .u-text-2 {
+  margin: 20px 0 30px 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 400px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-right: 0;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: -123px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 16px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-text-1 {
+    margin-left: -94px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 13px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-top: 90px;
+    margin-left: 81px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-bottom: 40px;
+    margin-left: 9px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 785px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 352px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: NaNpx;
+    margin-top: 0;
+    margin-left: 30px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 6px;
   }
 }
